[gd_scene load_steps=14 format=3 uid="uid://bcox08uy1whso"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_guolt"]
[ext_resource type="Theme" uid="uid://b0qka3g3xxcs5" path="res://assets/fonts/font_Theme.tres" id="2_rnqu1"]
[ext_resource type="Texture2D" uid="uid://4edqkabsjs1a" path="res://assets/sprites/UI/Start Button.png" id="3_vfmn5"]
[ext_resource type="Texture2D" uid="uid://u8wb36htapjo" path="res://assets/sprites/UI/Options Button.png" id="4_hm4b1"]
[ext_resource type="Texture2D" uid="uid://70c606637maj" path="res://assets/sprites/UI/Start Button Pressed.png" id="4_t0khi"]
[ext_resource type="Texture2D" uid="uid://bd4jsdmjmtax6" path="res://assets/sprites/UI/Start Button Hover.png" id="5_gl8fp"]
[ext_resource type="Texture2D" uid="uid://b1sdj5ir17731" path="res://assets/sprites/UI/Exit Button.png" id="5_p5icc"]
[ext_resource type="Texture2D" uid="uid://du2exw3qqwrly" path="res://assets/sprites/UI/Options Button Pressed.png" id="7_d515t"]
[ext_resource type="Texture2D" uid="uid://dg2ey5n7ef5yt" path="res://assets/sprites/UI/Options Button Hover.png" id="8_736w2"]
[ext_resource type="Texture2D" uid="uid://b6ny6yuxfmjrb" path="res://assets/sprites/UI/Exit Button Pressed.png" id="10_v1s0d"]
[ext_resource type="Texture2D" uid="uid://c3icfm17vnvm1" path="res://assets/sprites/UI/Exit Button Hover.png" id="11_ovrjn"]

[sub_resource type="Gradient" id="Gradient_0h302"]
offsets = PackedFloat32Array(0, 0.485455, 0.758065)
colors = PackedColorArray(0.192556, 0.192556, 0.192556, 1, 3.36915e-07, 0, 0.559719, 1, 0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pcbo0"]
gradient = SubResource("Gradient_0h302")
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_guolt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pcbo0")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 195.0
offset_top = 56.0
offset_right = 947.0
offset_bottom = 156.0
theme = ExtResource("2_rnqu1")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 80
text = "PONGODOT"
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -98.0
offset_right = 507.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_vfmn5")
texture_pressed = ExtResource("4_t0khi")
texture_hover = ExtResource("5_gl8fp")
stretch_mode = 3

[node name="OptionsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_hm4b1")
texture_pressed = ExtResource("7_d515t")
texture_hover = ExtResource("8_736w2")
stretch_mode = 3

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = 446.0
offset_right = 511.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("5_p5icc")
texture_pressed = ExtResource("10_v1s0d")
texture_hover = ExtResource("11_ovrjn")
stretch_mode = 3

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
